--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     }
   },
   "lint-staged": {
-    "*.js": "npm run lint"
+    "src/*.js": "npm run lint"
   },
   "browserslist": {
     "production": [
