--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "eslint src/**/*.js"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -26,7 +25,7 @@
     }
   },
   "lint-staged": {
-    "src/*.js": "npm run lint"
+    "src/*.js": "eslint src/*.js"
   },
   "browserslist": {
     "production": [
