--- a/.eslintrc
+++ b/.eslintrc
@@ -7,38 +7,6 @@
     }
   },
   "rules": {
-    "arrow-parens": [0, "as-needed"],
-    "arrow-body-style": [0, "as-needed"],
-    "class-methods-use-this": 0,
-    "comma-dangle": [0, "always-multiline"],
-    "import/imports-first": 0,
-    "import/newline-after-import": 0,
-    "import/no-dynamic-require": 0,
-    "import/no-extraneous-dependencies": 0,
-    "import/no-named-as-default": 0,
-    "import/no-webpack-loader-syntax": 0,
-    "import/prefer-default-export": 0,
-    "indent": [
-      0,
-      2,
-      {
-        "SwitchCase": 1
-      }
-    ],
-    "max-len": 0,
-    "newline-per-chained-call": 0,
-    "no-confusing-arrow": 0,
-    "no-console": 2,
-    "no-use-before-define": 0,
-    "prefer-template": 2,
-    "react/forbid-prop-types": 0,
-    "react/jsx-filename-extension": 0,
-    "react/jsx-no-target-blank": 0,
-    "react/require-default-props": 0,
-    "react/require-extension": 0,
-    "react/self-closing-comp": 0,
-    "redux-saga/no-yield-in-race": 0,
-    "redux-saga/yield-effects": 0,
-    "require-yield": 0
+    "no-console": 2
   }
 }
