--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "plugin:prettier/recommended"
+    ]
   },
   "husky": {
     "hooks": {
@@ -25,7 +28,7 @@
     }
   },
   "lint-staged": {
-    "src/*.js": "eslint src/*.js"
+    "src/*.js": "eslint --fix --max-warnings=0"
   },
   "browserslist": {
     "production": [
