--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "husky": "^4.2.1",
-    "lint-staged": "^10.0.7"
+    "lint-staged": "^10.0.7",
+    "prettier": "^1.19.1"
   }
 }
